move to appCaptcha enterprize, add profiling, move visibleOnFocus to chat.module.css, fix getAvatar

--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,3 @@ body {
   text-decoration: none;
   text-shadow: 0px 1px 0px #2f6627;
 }
-
-.visibleOnFocus {
-  position: absolute;
-  transform: translateY(-1000%);
-  transition: transform 0.3s;
-}
-.visibleOnFocus:focus {
-  transform: translateY(0);
-}
